doc/feat: update allocation api doc and return 403 error for unauthorised access
