# server/src/openAPI/allocation.swagger.ts
@@ -1,5 +1,9 @@
 import { activityDef } from "./definition/activityDef.swagger";
 import { allocationDef } from "./definition/allocationDef.swagger";
+import {
+  notAuth401Res,
+  unauthorisedAccessed403Res,
+} from "./definition/messageDef.swagger";
 import { staffDef } from "./definition/staffDef.swagger";
 import { unitDef } from "./definition/unitDef.swagger";
 
@@ -8,6 +12,13 @@ export const allocation = {
     post: {
       tags: ["Allocation"],
       summary: "Creates an allocation",
+      description: `
+      
+      Role authorisation:
+      - TA: not allowed
+      - Lecturer: can create allocation for unit they're lecturing but not isWorkforceApproved attribute
+      - Admin: can create allocation in any unit
+      `,
       operationId: "createAllocation",
       consumes: ["application.json"],
       produces: ["application/json"],
@@ -25,12 +36,21 @@ export const allocation = {
           description: "successful operation",
           schema: allocationDef,
         },
+        ...unauthorisedAccessed403Res,
+        ...notAuth401Res,
       },
     },
 
     put: {
       tags: ["Allocation"],
       summary: "Updates an allocation",
+      description: `
+      
+      Role authorisation:
+      - TA: not allowed
+      - Lecturer: not allowed
+      - Admin: can update allocation in any unit, regardless of the acceptance status
+      `,
       operationId: "updateAllocation",
       consumes: ["application.json"],
       produces: ["application/json"],
@@ -48,6 +68,8 @@ export const allocation = {
           description: "successful operation",
           schema: allocationDef,
         },
+        ...unauthorisedAccessed403Res,
+        ...notAuth401Res,
       },
     },
   },
@@ -91,6 +113,7 @@ export const allocation = {
             },
           },
         },
+        ...notAuth401Res,
       },
     },
   },
@@ -142,36 +165,44 @@ export const allocation = {
             },
           },
         },
+        ...notAuth401Res,
       },
     },
   },
 
   "/allocations/{id}": {
-    get: {
-      tags: ["Allocation"],
-      summary: "Get an allocation with id",
-      operationId: "getAllocation",
-      produces: ["application/json"],
-      parameters: [
-        {
-          in: "path",
-          name: "id",
-          description: "allocationID",
-          required: true,
-          type: "string",
-        },
-      ],
-      responses: {
-        "200": {
-          description: "successful operation",
-          schema: allocationDef,
-        },
-      },
-    },
+    // get: {
+    //   tags: ["Allocation"],
+    //   summary: "Get an allocation with id",
+    //   operationId: "getAllocation",
+    //   produces: ["application/json"],
+    //   parameters: [
+    //     {
+    //       in: "path",
+    //       name: "id",
+    //       description: "allocationID",
+    //       required: true,
+    //       type: "string",
+    //     },
+    //   ],
+    //   responses: {
+    //     "200": {
+    //       description: "successful operation",
+    //       schema: allocationDef,
+    //     },
+    //   },
+    // },
 
     delete: {
       tags: ["Allocation"],
       summary: "Delete an allocation with id",
+      description: `
+      
+      Role authorisation:
+      - TA: can delete allocation assigned to them and if the allocation is already approved
+      - Lecturer: can delete allocation in unit they're lecturing and if the allocation is not already accepted
+      - Admin: can delete allocation in any unit, regardless of the acceptance status
+      `,
       operationId: "deleteAllocation",
       produces: ["application/json"],
       parameters: [
@@ -188,6 +219,8 @@ export const allocation = {
           description: "successful operation",
           schema: allocationDef,
         },
+        ...unauthorisedAccessed403Res,
+        ...notAuth401Res,
       },
     },
   },
@@ -196,6 +229,13 @@ export const allocation = {
     patch: {
       tags: ["Allocation"],
       summary: "Update lecturer approval status for specified allocation",
+      description: `
+      
+      Role authorisation:
+      - TA: not allowed
+      - Lecturer: can approve allocation in unit they're lecturing
+      - Admin: can approve allocation in any unit
+      `,
       operationId: "updateLecturerApproval",
       produces: ["application/json"],
       parameters: [
@@ -219,6 +259,8 @@ export const allocation = {
           description: "successful operation",
           schema: allocationDef,
         },
+        ...notAuth401Res,
+        ...unauthorisedAccessed403Res,
       },
     },
   },
@@ -227,6 +269,13 @@ export const allocation = {
     patch: {
       tags: ["Allocation"],
       summary: "Update acceptance status for the specified allocation",
+      description: `
+      
+      Role authorisation:
+      - TA: not allowed
+      - Lecturer: not allowed
+      - Admin: can approve allocation in any unit
+      `,
       operationId: "updateTaAcceptance",
       produces: ["application/json"],
       parameters: [
@@ -250,6 +299,8 @@ export const allocation = {
           description: "successful operation",
           schema: allocationDef,
         },
+        ...notAuth401Res,
+        ...unauthorisedAccessed403Res,
       },
     },
   },
@@ -258,6 +309,12 @@ export const allocation = {
     patch: {
       tags: ["Allocation"],
       summary: "Update workforce approval status for the specified allocation",
+      description: `
+      
+      Role authorisation:
+      - TA/Lecturer: can accept allocation assigned to them (i.e. allocation.staffId == user.id)
+      - Admin: can accept allocation in any unit (on behalf of the assignee)
+      `,
       operationId: "updateWorkforceApproval",
       produces: ["application/json"],
       parameters: [
@@ -281,6 +338,8 @@ export const allocation = {
           description: "successful operation",
           schema: allocationDef,
         },
+        ...unauthorisedAccessed403Res,
+        ...notAuth401Res,
       },
     },
   },
