# server/swaggerDoc.json
@@ -625,6 +625,7 @@
       "post": {
         "tags": ["Allocation"],
         "summary": "Creates an allocation",
+        "description": "\n      \n      Role authorisation:\n      - TA: not allowed\n      - Lecturer: can create allocation for unit they're lecturing but not isWorkforceApproved attribute\n      - Admin: can create allocation in any unit\n      ",
         "operationId": "createAllocation",
         "consumes": ["application.json"],
         "produces": ["application/json"],
@@ -693,12 +694,39 @@
                 }
               }
             }
+          },
+          "401": {
+            "description": "user has not been authenticated",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "authenticated": { "type": "boolean", "example": "false" },
+                "message": {
+                  "type": "string",
+                  "example": "user has not been authenticated"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "User role doesn't have authorisation for the operation",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "error": {
+                  "type": "string",
+                  "example": "UnauthorisedAccessedError"
+                },
+                "message": { "type": "string" }
+              }
+            }
           }
         }
       },
       "put": {
         "tags": ["Allocation"],
         "summary": "Updates an allocation",
+        "description": "\n      \n      Role authorisation:\n      - TA: not allowed\n      - Lecturer: not allowed\n      - Admin: can update allocation in any unit, regardless of the acceptance status\n      ",
         "operationId": "updateAllocation",
         "consumes": ["application.json"],
         "produces": ["application/json"],
@@ -765,6 +793,32 @@
                   "default": null,
                   "nullable": true
                 }
+              }
+            }
+          },
+          "401": {
+            "description": "user has not been authenticated",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "authenticated": { "type": "boolean", "example": "false" },
+                "message": {
+                  "type": "string",
+                  "example": "user has not been authenticated"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "User role doesn't have authorisation for the operation",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "error": {
+                  "type": "string",
+                  "example": "UnauthorisedAccessedError"
+                },
+                "message": { "type": "string" }
               }
             }
           }
@@ -870,6 +924,19 @@
                       "allocationMaxNum": { "type": "integer", "default": 1 }
                     }
                   }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "user has not been authenticated",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "authenticated": { "type": "boolean", "example": "false" },
+                "message": {
+                  "type": "string",
+                  "example": "user has not been authenticated"
                 }
               }
             }
@@ -986,61 +1053,28 @@
                 }
               }
             }
-          }
-        }
-      }
-    },
-    "/allocations/{id}": {
-      "get": {
-        "tags": ["Allocation"],
-        "summary": "Get an allocation with id",
-        "operationId": "getAllocation",
-        "produces": ["application/json"],
-        "parameters": [
-          {
-            "in": "path",
-            "name": "id",
-            "description": "allocationID",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "successful operation",
+          },
+          "401": {
+            "description": "user has not been authenticated",
             "schema": {
               "type": "object",
               "properties": {
-                "id": { "type": "string", "format": "uuid" },
-                "activityId": { "type": "string", "format": "uuid" },
-                "staffId": { "type": "string", "format": "uuid" },
-                "offerExpiryDate": {
+                "authenticated": { "type": "boolean", "example": "false" },
+                "message": {
                   "type": "string",
-                  "format": "timestamptz"
-                },
-                "isLecturerApproved": {
-                  "type": "boolean",
-                  "default": null,
-                  "nullable": true
-                },
-                "isTaAccepted": {
-                  "type": "boolean",
-                  "default": null,
-                  "nullable": true
-                },
-                "isWorkforceApproved": {
-                  "type": "boolean",
-                  "default": null,
-                  "nullable": true
+                  "example": "user has not been authenticated"
                 }
               }
             }
           }
         }
-      },
+      }
+    },
+    "/allocations/{id}": {
       "delete": {
         "tags": ["Allocation"],
         "summary": "Delete an allocation with id",
+        "description": "\n      \n      Role authorisation:\n      - TA: can delete allocation assigned to them and if the allocation is already approved\n      - Lecturer: can delete allocation in unit they're lecturing and if the allocation is not already accepted\n      - Admin: can delete allocation in any unit, regardless of the acceptance status\n      ",
         "operationId": "deleteAllocation",
         "produces": ["application/json"],
         "parameters": [
@@ -1082,6 +1116,32 @@
                 }
               }
             }
+          },
+          "401": {
+            "description": "user has not been authenticated",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "authenticated": { "type": "boolean", "example": "false" },
+                "message": {
+                  "type": "string",
+                  "example": "user has not been authenticated"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "User role doesn't have authorisation for the operation",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "error": {
+                  "type": "string",
+                  "example": "UnauthorisedAccessedError"
+                },
+                "message": { "type": "string" }
+              }
+            }
           }
         }
       }
@@ -1090,6 +1150,7 @@
       "patch": {
         "tags": ["Allocation"],
         "summary": "Update lecturer approval status for specified allocation",
+        "description": "\n      \n      Role authorisation:\n      - TA: not allowed\n      - Lecturer: can approve allocation in unit they're lecturing\n      - Admin: can approve allocation in any unit\n      ",
         "operationId": "updateLecturerApproval",
         "produces": ["application/json"],
         "parameters": [
@@ -1138,6 +1199,32 @@
                 }
               }
             }
+          },
+          "401": {
+            "description": "user has not been authenticated",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "authenticated": { "type": "boolean", "example": "false" },
+                "message": {
+                  "type": "string",
+                  "example": "user has not been authenticated"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "User role doesn't have authorisation for the operation",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "error": {
+                  "type": "string",
+                  "example": "UnauthorisedAccessedError"
+                },
+                "message": { "type": "string" }
+              }
+            }
           }
         }
       }
@@ -1146,6 +1233,7 @@
       "patch": {
         "tags": ["Allocation"],
         "summary": "Update acceptance status for the specified allocation",
+        "description": "\n      \n      Role authorisation:\n      - TA: not allowed\n      - Lecturer: not allowed\n      - Admin: can approve allocation in any unit\n      ",
         "operationId": "updateTaAcceptance",
         "produces": ["application/json"],
         "parameters": [
@@ -1194,6 +1282,32 @@
                 }
               }
             }
+          },
+          "401": {
+            "description": "user has not been authenticated",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "authenticated": { "type": "boolean", "example": "false" },
+                "message": {
+                  "type": "string",
+                  "example": "user has not been authenticated"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "User role doesn't have authorisation for the operation",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "error": {
+                  "type": "string",
+                  "example": "UnauthorisedAccessedError"
+                },
+                "message": { "type": "string" }
+              }
+            }
           }
         }
       }
@@ -1202,6 +1316,7 @@
       "patch": {
         "tags": ["Allocation"],
         "summary": "Update workforce approval status for the specified allocation",
+        "description": "\n      \n      Role authorisation:\n      - TA/Lecturer: can accept allocation assigned to them (i.e. allocation.staffId == user.id)\n      - Admin: can accept allocation in any unit (on behalf of the assignee)\n      ",
         "operationId": "updateWorkforceApproval",
         "produces": ["application/json"],
         "parameters": [
@@ -1248,6 +1363,32 @@
                   "default": null,
                   "nullable": true
                 }
+              }
+            }
+          },
+          "401": {
+            "description": "user has not been authenticated",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "authenticated": { "type": "boolean", "example": "false" },
+                "message": {
+                  "type": "string",
+                  "example": "user has not been authenticated"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "User role doesn't have authorisation for the operation",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "error": {
+                  "type": "string",
+                  "example": "UnauthorisedAccessedError"
+                },
+                "message": { "type": "string" }
               }
             }
           }
